New version of form searcher / filters
* Filters:
    - Filters are now services
    - Remove AbstractFieldFilter and FieldFilterDoctrineInterface classes
    - Filters should now extends AbstractFilter or implements FilterInterface
    - The old filters are deleted. Use new filter classes (filter options have been changed)
* Form Searcher:
    - Remove AbstractFormSearcher class. Use AbstractSearcher instead
* Add SearchFormBuilder class
* Crud class:
    - Update __construct signature
    - Remove router, formFactory, request, registry properties (services). Use container (locator) instead
    - Remove user and formSearcher properties
    - Remove initializeFieldsFilter method
    - Remove getSearcherForm method (use getSearchForm instead)
    - Add searchForm property (SearchFormBuilder|FormView)
    - Add getSearchForm method
    - Add getVirtualColumns and getVirtualColumn methods
    - createSearcherForm method use now SearchFormBuilder class
* CrudFactory class:
    - Update __construct signature
    - Remove all properties (services). Use container (locator) instead
* CrudSession class:
    - formSearcherData property is renamed to searchFormData.
    - Add searchFormIsSubmitted property

--- a/src/Resources/views/Theme/base.html.twig
+++ b/src/Resources/views/Theme/base.html.twig
@@ -232,7 +232,7 @@
 
 {% block search_form_start %}
 {% spaceless %}
-    {{ form_start(crud.searcherForm, {'attr': form_attr}) }}
+    {{ form_start(crud.searchForm, {'attr': form_attr}) }}
 {% endspaceless %}
 {% endblock %}
 
