--- a/tests/Functional/App/templates/user/search.html.twig
+++ b/tests/Functional/App/templates/user/search.html.twig
@@ -1,7 +1,7 @@
 {{ crud_search_form_start(crud, {}, {'class': 'form-inline'}) }}
-    {{ form_row(crud.searcherform.username) }}
-    {{ form_row(crud.searcherform.firstName) }}
-    {{ form_row(crud.searcherform.lastName) }}
+    {{ form_row(crud.searchForm.username) }}
+    {{ form_row(crud.searchForm.firstName) }}
+    {{ form_row(crud.searchForm.lastName) }}
 
     <div>
         {{ crud_search_form_submit(crud) }}
