--- a/src/Resources/views/IconTheme/base.html.twig
+++ b/src/Resources/views/IconTheme/base.html.twig
@@ -1,13 +1,13 @@
 {% block asc %}
-{% spaceless %}
+{% apply spaceless %}
     <i>^</i>
-{% endspaceless %}
+{% endapply %}
 {% endblock %}
 
 {% block desc %}
-{% spaceless %}
+{% apply spaceless %}
     <i>v</i>
-{% endspaceless %}
+{% endapply %}
 {% endblock %}
 
 {% block display_settings %}{% endblock %}
