--- a/src/Resources/views/IconTheme/fontawesome4.html.twig
+++ b/src/Resources/views/IconTheme/fontawesome4.html.twig
@@ -1,31 +1,31 @@
 {% use '@EcommitCrud/IconTheme/base.html.twig' %}
 
 {% block asc %}
-{% spaceless %}
+{% apply spaceless %}
     <i class="fa fa-sort-alpha-asc"></i>
-{% endspaceless %}
+{% endapply %}
 {% endblock %}
 
 {% block desc %}
-{% spaceless %}
+{% apply spaceless %}
     <i class="fa fa-sort-alpha-desc"></i>
-{% endspaceless %}
+{% endapply %}
 {% endblock %}
 
 {% block display_settings %}
-{% spaceless %}
+{% apply spaceless %}
     <i class="fa fa-cog" aria-hidden="true"></i>
-{% endspaceless %}
+{% endapply %}
 {% endblock %}
 
 {% block search %}
-{% spaceless %}
+{% apply spaceless %}
     <i class="fa fa-search" aria-hidden="true"></i>
-{% endspaceless %}
+{% endapply %}
 {% endblock %}
 
 {% block reset %}
-{% spaceless %}
+{% apply spaceless %}
     <i class="fa fa-fire" aria-hidden="true"></i>
-{% endspaceless %}
+{% endapply %}
 {% endblock %}
