--- a/src/Resources/views/Form/bootstrap_3_horizontal_layout.html.twig
+++ b/src/Resources/views/Form/bootstrap_3_horizontal_layout.html.twig
@@ -1,7 +1,7 @@
 {% extends 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% block form_row -%}
-    {% spaceless %}
+    {% apply spaceless %}
         <div class="form-group{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}">
             {{ form_label(form) }}
             <div class="{{ block('form_group_class') }}">
@@ -9,11 +9,11 @@
                 {{ form_widget(form) }}
             </div>
         </div>
-    {% endspaceless %}
+    {% endapply %}
 {%- endblock form_row %}
 
 {% block form_errors %}
-    {% spaceless %}
+    {% apply spaceless %}
         {% if errors|length > 0 %}
             {% if form.parent %}
                 <span class="help-block">
@@ -43,5 +43,5 @@
                 {% endfor %}
             {% endif %}
         {% endif %}
-    {% endspaceless %}
+    {% endapply %}
 {% endblock form_errors %}
