--- a/src/Resources/views/Form/div_layout.html.twig
+++ b/src/Resources/views/Form/div_layout.html.twig
@@ -1,6 +1,6 @@
 {% extends 'form_div_layout.html.twig' %}
 {% block form_errors %}
-{% spaceless %}
+{% apply spaceless %}
     {% if errors|length > 0 %}
     <ul class="form_error">
         {% for error in errors %}
@@ -19,5 +19,5 @@
         {% endfor %}
     </ul>
     {% endif %}
-{% endspaceless %}
+{% endapply %}
 {% endblock form_errors %}
