Replace CSS classes by data-ec-crud- attributes
.ec-crud-modal-auto -> data-ec-crud-toggle="modal-auto"
.ec-crud-remote-modal-auto -> data-ec-crud-toggle="remote-modal-auto"
.ec-crud-ajax-click-auto -> data-ec-crud-toggle="ajax-click"
.ec-crud-ajax-link-auto -> data-ec-crud-toggle="ajax-link"
.ec-crud-ajax-form-auto -> data-ec-crud-toggle="ajax-form"
.ec-crud-search-form -> data-ec-crud-toggle="search-form"
.ec-crud-search-reset -> data-ec-crud-toggle="search-reset"
.ec-crud-display-settings -> data-ec-crud-toggle="display-settings"
.ec-crud-display-settings-button -> data-ec-crud-toggle="display-settings-button"
.ec-crud-display-settings-check-all-columns -> data-ec-crud-toggle="display-settings-check-all-columns"
.ec-crud-display-settings-uncheck-all-columns -> data-ec-crud-toggle="display-settings-uncheck-all-columns"
.ec-crud-display-settings-reset -> data-ec-crud-toggle="display-settings-reset"

--- a/templates/Theme/base.html.twig
+++ b/templates/Theme/base.html.twig
@@ -154,7 +154,7 @@
 {% block display_settings %}
 {% apply spaceless %}
     {% if crud.displayResults %}
-        {% set display_settings_container_attributes = {'class': 'ec-crud-display-settings', 'id': 'ec-crud-display-settings-'~crud.sessionName, 'data-crud-list-id': crud.divIdList} %}
+        {% set display_settings_container_attributes = {'data-ec-crud-toggle': 'display-settings', 'id': 'ec-crud-display-settings-'~crud.sessionName, 'data-crud-list-id': crud.divIdList} %}
         {% if modal %}
             {{ block('display_settings_button_modal', template_name) }}
             {{ block('display_settings_container_modal', template_name) }}
@@ -178,7 +178,7 @@
 
 {% block display_settings_button %}
     {% set display_settings_text = display_settings_text|default('display_settings.title'|trans({}, 'EcommitCrudBundle')) %}
-    {% set button_attr = button_attr|default([])|merge({class: (button_attr.class|default('') ~ ' ec-crud-display-settings-button')|trim, 'data-display-settings': 'ec-crud-display-settings-'~crud.sessionName}) %}
+    {% set button_attr = button_attr|default([])|merge({'data-ec-crud-toggle': 'display-settings-button', 'data-display-settings': 'ec-crud-display-settings-'~crud.sessionName}) %}
     <button{% with { attr: button_attr } %}{{ block('attributes', template_name) }}{% endwith %}>
         {{ crud_icon('display_settings') }} {{ display_settings_text }}
     </button>
@@ -212,9 +212,9 @@
             {{ form_row(form.resultsPerPage) }}
             {{ form_row(form.displayedColumns) }}
             <div>
-                <button type="button" class="ec-crud-display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
+                <button type="button" data-ec-crud-toggle="display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
                 &nbsp;
-                <button type="button" class="ec-crud-display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
+                <button type="button" data-ec-crud-toggle="display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
             </div>
             <div style="text-align: center;">
                 {{ form_row(form.reset) }}
