--- a/templates/Theme/bootstrap3.html.twig
+++ b/templates/Theme/bootstrap3.html.twig
@@ -63,9 +63,9 @@
                     {{ form_row(form.resultsPerPage) }}
                     {{ form_row(form.displayedColumns) }}
                     <div>
-                        <button type="button" class="btn btn-default btn-xs ec-crud-display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
+                        <button type="button" class="btn btn-default btn-xs" data-ec-crud-toggle="display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
                         &nbsp;
-                        <button type="button" class="btn btn-default btn-xs ec-crud-display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
+                        <button type="button" class="btn btn-default btn-xs" data-ec-crud-toggle="display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -89,9 +89,9 @@
             {{ form_row(form.resultsPerPage) }}
             {{ form_row(form.displayedColumns) }}
             <div>
-                <button type="button" class="btn btn-default btn-xs ec-crud-display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
+                <button type="button" class="btn btn-default btn-xs" data-ec-crud-toggle="display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
                 &nbsp;
-                <button type="button" class="btn btn-default btn-xs ec-crud-display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
+                <button type="button" class="btn btn-default btn-xs" data-ec-crud-toggle="display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
             </div>
 
             <div style="text-align: center;">
