--- a/templates/Theme/bootstrap4.html.twig
+++ b/templates/Theme/bootstrap4.html.twig
@@ -71,9 +71,9 @@
                 {{ form_row(form.resultsPerPage) }}
                 {{ form_row(form.displayedColumns) }}
                 <div>
-                    <button type="button" class="btn btn-outline-secondary btn-sm ec-crud-display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
+                    <button type="button" class="btn btn-outline-secondary btn-sm" data-ec-crud-toggle="display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
                     &nbsp;
-                    <button type="button" class="btn btn-outline-secondary btn-sm ec-crud-display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
+                    <button type="button" class="btn btn-outline-secondary btn-sm" data-ec-crud-toggle="display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
                 </div>
             </div>
             <div class="modal-footer">
@@ -97,9 +97,9 @@
         {{ form_row(form.resultsPerPage) }}
         {{ form_row(form.displayedColumns) }}
         <div>
-            <button type="button" class="btn btn-outline-secondary btn-sm ec-crud-display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
+            <button type="button" class="btn btn-outline-secondary btn-sm" data-ec-crud-toggle="display-settings-check-all-columns">{{ display_settings_check_all_text }}</button>
             &nbsp;
-            <button type="button" class="btn btn-outline-secondary btn-sm ec-crud-display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
+            <button type="button" class="btn btn-outline-secondary btn-sm" data-ec-crud-toggle="display-settings-uncheck-all-columns">{{ display_settings_uncheck_all_text }}</button>
         </div>
 
         <div style="text-align: center;">
